GNOME Bugzilla – Bug 633591
Fix cursor image tracking on 64-bit systems
Last modified: 2010-11-01 15:15:39 UTC
Like all X API, XFixesGetCursorImage returns arrays of 32-bit quantities as arrays of long; on 64-bit systems we need to convert to an array of 32-bit words before creating a texture from the result.
Created attachment 173576 [details] [review] Fix cursor image tracking on 64-bit systems
Comment on attachment 173576 [details] [review] Fix cursor image tracking on 64-bit systems we should fix shell-recorder to use shell-xfixes-cursor too rather than having this code in two places...
(In reply to comment #2) > (From update of attachment 173576 [details] [review]) > we should fix shell-recorder to use shell-xfixes-cursor too rather than having > this code in two places... Don't think that's really easy - one needs a CoglTexture (vram), one a cairo_image (system ram)- we could try to share the fetching code so we don't fetch it twice on every change when there is a magnifier and a recorder active, but I suspect it would be a net increase of LOC for a rare situation. (Yes, we wouldn't need to work around this issue twice...)
Attachment 173576 [details] pushed as 909ec7a - Fix cursor image tracking on 64-bit systems